update the test task